--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 
 body {
-    background-color: #d7d9d9;
+    margin: 0px;
+}
+
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
+header {
+    width: 100%;
+    height: 98px;
+    background-color: #fff;
+    border-bottom: 1px solid #F8E0F8;
+    display: flex;
+}
+
+header img {
+    height: 50px;
+    margin: 0 auto;
+    margin-top: 20px;
 }
