--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
     margin: 0px;
+    font-family: "Space Grotesk", sans-serif;
 }
 
 *, *::after, *::before {
@@ -13,10 +14,32 @@ header {
     background-color: #fff;
     border-bottom: 1px solid #F8E0F8;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 70px;
 }
 
 header img {
+    width: 151px;
     height: 50px;
-    margin: 0 auto;
-    margin-top: 20px;
+  /*  margin: 0 auto;
+    margin-top: 20px;*/
+    margin-right: 32px;
 }
+
+.menu_wrapper {
+    display: flex;
+}
+
+.menu_wrapper a {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    color: #000000;
+    text-decoration: none;
+    display:  flex;
+    margin-right: 32px;
+    white-space: nowrap;
+    opacity: 0.5;
+}
+
