--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 header {
     width: 100%;
-    height: 98px;
+    height: 78px;
     background-color: #fff;
     border-bottom: 1px solid #F8E0F8;
     display: flex;
@@ -43,3 +43,63 @@ header img {
     opacity: 0.5;
 }
 
+/*section__sellNft start*/
+.section__sellNft {
+    display:  flex;
+    flex-flow: column;
+    position: relatives;
+}
+
+.section__sellNft h1 {
+    text-align: center;
+    font-weight:  700;
+    font-size: 80px;
+    line-height: 96px;
+    color: #000000;
+    text-shadow: -5px 5px 0px #FFFFFF;
+    padding-top: 117px;
+    margin: 0 auto;
+}
+
+.section__sellNft p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #532C59;
+    padding-top: 32px;
+    margin-bottom: 32px;
+}
+
+.section__sellNft button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 114px;
+    padding: 16px 20px;
+    background: #532C59;
+    border-radius: 15px;
+    margin: 0 auto;
+    color: #FFFFFF;
+    font-family: 'Syne';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 16px;
+    white-space: nowrap;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.sellNft__bg {
+    position: absolute;
+    width: 1440px;
+    height: 499px;
+    left: 0;
+    top: 57px;
+    background: pink;
+    background: radial-gradient(50% 50% at 50% 50%, #E36CE6 0%, rgba(255, 255, 255, 0) 100%);
+    opacity: 0.4;
+    filter: blur(116px);
+    z-index: -1;
+}
