our team section

--- a/style.css
+++ b/style.css
@@ -47,7 +47,9 @@ header img {
 .section__sellNft {
     display:  flex;
     flex-flow: column;
-    position: relatives;
+    position: relative;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .section__sellNft h1 {
@@ -103,3 +105,120 @@ header img {
     filter: blur(116px);
     z-index: -1;
 }
+
+.section__sellNft img {
+    position: absolute;
+}
+
+.sellNft__img1 {
+    width: 173px;
+    height: 174px;
+    top: 5px;
+    left: 53px;
+}
+
+.sellNft__img3 {
+    width: 111px;
+    height: 112px;
+    top: 67px;
+    right: 167px;
+}
+
+.sellNft__img2 {
+    width: 299px;
+    height: 300px;
+    top: 298px;
+    left: -16px;
+}
+
+.sellNft__img4 {
+    width: 211px;
+    height: 211px;
+    right: 33px;
+    top: 387px;
+     
+}
+
+/*section_partners*/
+.section__partners {
+    display: flex;
+    justify-content: center; /* Центрируем по горизонтали */
+    padding: 40px 0; /* Убираем padding по горизонтали */
+    margin-top: 101px; /* Верхний отступ */
+    max-width: 1440px;
+    margin-left: auto; /* Выравниваем по центру */
+    margin-right: auto; /* Выравниваем по центру */
+}
+
+
+.section__partners img {
+    margin-right: 40px;
+}
+
+.section__partners img:last-child {
+    margin-right: 0px;
+}
+
+.section__team {
+    display: flex;
+    flex-flow: column;
+    margin-top: 80px;
+}
+
+.section__team h2 {
+    font-family: 'Syne';
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 24px;
+}
+
+.section__team h3 {
+    font-family: 'Space Grotesk';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #532C59;
+    margin: 0;
+    padding-bottom: 80px;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding-bottom: 160px;
+}
+
+.team__wrapper {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    margin: 0 98px;
+}
+
+.team__wrapper p {
+    font-family: 'Space Grotesk';
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    color: #000000;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    white-space: nowrap;
+}
+
+.team__wrapper span {
+    font-family: 'Space Grotesk';
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #532C59;
+}
+
