--- a/style.css
+++ b/style.css
@@ -8,6 +8,29 @@ body {
     box-sizing: border-box;
 }
 
+.nft_h2 {
+    font-family: 'Syne';
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 24px;
+}
+
+.nft_h3 {
+    font-family: 'Space Grotesk';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #532C59;
+    margin: 0;
+    padding-bottom: 80px;
+}
+
+/* hrader */
+
 header {
     width: 100%;
     height: 78px;
@@ -165,26 +188,7 @@ header img {
     margin-top: 80px;
 }
 
-.section__team h2 {
-    font-family: 'Syne';
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 64px;
-    text-align: center;
-    color: #000000;
-    margin-bottom: 24px;
-}
 
-.section__team h3 {
-    font-family: 'Space Grotesk';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #532C59;
-    margin: 0;
-    padding-bottom: 80px;
-}
 
 .wrapper {
     display: flex;
@@ -216,6 +220,52 @@ header img {
 .team__wrapper span {
     font-family: 'Space Grotesk';
     font-weight: 300;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #532C59;
+}
+
+/*section__collections*/
+.section__collections {
+    display:  flex;
+    flex-flow: column;
+    margin: 0 auto;
+    max-width: 1440px;
+}
+
+.section__collections .wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    padding-top: 64px;
+}
+
+.collection__wrapper {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    max-width: 412px;
+    margin: 0 16px;
+    margin-bottom: 64px
+}
+
+
+.collection__wrapper p{
+    font-family: 'Syne';
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 42px;
+    text-align: center;
+    color: #000000;
+    margin: 0;
+    padding-bottom: 12px;
+    margin-top: 16px;
+}
+
+.collection__wrapper span {
+    font-family: 'Space Grotesk';
+    font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     text-align: center;
