--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ header img {
     max-width: 1400px;
     margin: 0 auto;
     padding-bottom: 160px;
-    padding-top: ;
+    padding-top: 10px;
 }
 
 .team__wrapper {
@@ -316,3 +316,49 @@ header img {
     color: #532C59;
 }
 
+/* section__qanda */
+.section__qanda {
+    display: flex;
+    justify-content: center;
+    margin: 50px;
+    margin-bottom: 500px;
+}
+
+.qa__wrapper {
+    padding: 24px;
+    border: 2px solid #D6BCFA;
+    border-radius: 15px;
+    background: #FCFAFF;
+    position: relative;
+    min-width: 412px;
+}
+
+.qa__wrapper p{
+    font-family: 'Space Grotesk';
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+    opacity: 0.8px;
+    color: #000000;
+    margin: 0;
+    padding-bottom: 12px;    
+}
+
+.qa__wrapper span {
+    display: flex;
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #532C59;
+    overflow: hidden;
+    transition: 0.3s;
+}
+
+.qa__wrapper svg {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    cursor: pointer;
+}
