--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
-
 body {
     margin: 0px;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 *, *::after, *::before {
     box-sizing: border-box;
 }
 
-.nft_h2 {
+.nft__h2 {
     font-family: 'Syne';
     font-weight: 700;
     font-size: 48px;
@@ -18,7 +17,7 @@ body {
     margin-bottom: 24px;
 }
 
-.nft_h3 {
+.nft__h3 {
     font-family: 'Space Grotesk';
     font-weight: 400;
     font-size: 16px;
@@ -26,58 +25,66 @@ body {
     text-align: center;
     color: #532C59;
     margin: 0;
-     
 }
 
-/* hrader */
+/* header */
 
 header {
     width: 100%;
-    height: 78px;
-    background-color: #fff;
-    border-bottom: 1px solid #F8E0F8;
+    background-color: #ffff;
+    border-bottom: 1px solid #F8E0FB;
+    
+}
+
+header .wrapper {
+    height: 76px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 70px;
+    max-width: 1440px;
+    padding: 0px 70px;
+    margin: 0 auto;
 }
 
 header img {
     width: 151px;
-    height: 50px;
-  /*  margin: 0 auto;
-    margin-top: 20px;*/
+    height: 40px;
     margin-right: 32px;
+    /* margin: 18px auto; */
 }
 
-.menu_wrapper {
+.menu__wrapper {
     display: flex;
 }
 
-.menu_wrapper a {
+.menu__wrapper a{
     font-weight: 500;
     font-size: 16px;
-    line-height: 16px;
+    line-height: 20px;
     color: #000000;
     text-decoration: none;
-    display:  flex;
+    display: flex;
     margin-right: 32px;
     white-space: nowrap;
     opacity: 0.5;
 }
 
-/*section__sellNft start*/
-.section__sellNft {
-    display:  flex;
+/* section__sellNFt */
+
+
+.section__sellNFt {
+    display: flex;
     flex-flow: column;
     position: relative;
     max-width: 1440px;
     margin: 0 auto;
 }
 
-.section__sellNft h1 {
+
+.section__sellNFt h1 {
+    font-family: 'Syne';
     text-align: center;
-    font-weight:  700;
+    font-weight: 700;
     font-size: 80px;
     line-height: 96px;
     color: #000000;
@@ -86,17 +93,17 @@ header img {
     margin: 0 auto;
 }
 
-.section__sellNft p {
+.section__sellNFt p  {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     text-align: center;
     color: #532C59;
-    padding-top: 32px;
+    padding-top: 32px; 
     margin-bottom: 32px;
 }
 
-.section__sellNft button {
+.section__sellNFt button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,70 +116,71 @@ header img {
     font-family: 'Syne';
     font-weight: 700;
     font-size: 16px;
-    line-height: 16px;
+    line-height: 20px;
     white-space: nowrap;
     cursor: pointer;
     border: none;
     outline: none;
 }
 
-.sellNft__bg {
+.sellNFt__bg {
     position: absolute;
-    width: 1440px;
+    max-width: 1440px;
+    width: 100%;
     height: 499px;
-    left: 0;
+    left: 0px;
     top: 57px;
     background: pink;
     background: radial-gradient(50% 50% at 50% 50%, #E36CE6 0%, rgba(255, 255, 255, 0) 100%);
-    opacity: 0.4;
+    opacity: 1;
     filter: blur(116px);
     z-index: -1;
 }
 
-.section__sellNft img {
+
+.section__sellNFt img {
     position: absolute;
 }
 
-.sellNft__img1 {
+.sellNFt__img1 {
     width: 173px;
     height: 174px;
     top: 5px;
     left: 53px;
 }
 
-.sellNft__img3 {
+.sellNFt__img2 {
     width: 111px;
     height: 112px;
     top: 67px;
-    right: 167px;
+    right: 167px
 }
 
-.sellNft__img2 {
+.sellNFt__img3 {
     width: 299px;
     height: 300px;
-    top: 298px;
     left: -16px;
+    top: 298px;
 }
 
-.sellNft__img4 {
+.sellNFt__img4 {
     width: 211px;
     height: 211px;
     right: 33px;
-    top: 387px;
-     
+    top: 387px; 
 }
 
-/*section_partners*/
+/* section__partners */
+
 .section__partners {
     display: flex;
-    justify-content: center; /* Центрируем по горизонтали */
-    padding: 40px 0; /* Убираем padding по горизонтали */
-    margin-top: 101px; /* Верхний отступ */
+    justify-content: center;
+    padding: 40px 0px;
+    margin: 0 auto;
+    margin-top: 101px;
     max-width: 1440px;
-    margin-left: auto; /* Выравниваем по центру */
-    margin-right: auto; /* Выравниваем по центру */
+    
 }
-
 
 .section__partners img {
     margin-right: 40px;
@@ -182,27 +190,30 @@ header img {
     margin-right: 0px;
 }
 
-/*section__team*/
+
+/* section__team */
+
 .section__team {
     display: flex;
     flex-flow: column;
     margin-top: 80px;
 }
 
+
 .section__team .wrapper {
     display: flex;
     justify-content: space-between;
-    max-width: 1400px;
+    max-width: 1440px;
     margin: 0 auto;
     padding-bottom: 160px;
-    padding-top: 10px;
+    padding-top: 80px;
 }
 
 .team__wrapper {
     display: flex;
     flex-flow: column;
     align-items: center;
-    margin: 0 98px;
+    margin: 0px 100px
 }
 
 .team__wrapper p {
@@ -217,6 +228,7 @@ header img {
     white-space: nowrap;
 }
 
+
 .team__wrapper span {
     font-family: 'Space Grotesk';
     font-weight: 300;
@@ -226,13 +238,14 @@ header img {
     color: #532C59;
 }
 
-/*section__collections*/
+
+/* section__collections */
+
 .section__collections {
     display:  flex;
     flex-flow: column;
     margin: 0 auto;
     max-width: 1440px;
-    
 }
 
 .section__collections .wrapper {
@@ -257,7 +270,6 @@ header img {
     font-weight: 600;
     font-size: 32px;
     line-height: 42px;
-    max-width: 312px;
     text-align: center;
     color: #000000;
     margin: 0;
@@ -270,18 +282,19 @@ header img {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    max-width: 312px;
     text-align: center;
     color: #532C59;
 }
 
 /* section__provide */
+
 .section__provide {
     display: flex;
-    flex-flow: column;    
+    flex-flow: column;
+    
 }
 
-.section__provide .wrapper {
+.section__provide .wrapper{
     display: flex;
     flex-flow: row wrap;
     padding-top: 56px;
@@ -289,12 +302,12 @@ header img {
 }
 
 .provide__wrapper {
-    display: flex;
-    width: 301px;
-    margin: 0 16px;
-    flex-flow: column;
-    align-items: center;
-    padding-bottom: 220px;
+     width: 301px;
+     margin: 0 16px;
+     display: flex;
+     flex-flow: column;
+     align-items: center;
+     padding-bottom: 100px;
 }
 
 .provide__wrapper p {
@@ -307,7 +320,7 @@ header img {
     margin: 12px 0;
 }
 
-.provide__wrapper {
+.provide__wrapper span {
     font-family: 'Space Grotesk';
     font-weight: 300;
     font-size: 14px;
@@ -316,32 +329,74 @@ header img {
     color: #532C59;
 }
 
+
 /* section__qanda */
+
 .section__qanda {
     display: flex;
     justify-content: center;
-    margin: 50px;
-    margin-bottom: 500px;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.section__qanda .text__wrapper {
+    display: flex;
+    flex-flow: column;
+    margin-right: 32px;
+    max-width: 412px;
+}
+
+.section__qanda .wrapper1 {
+    margin-right: 32px
+}
+
+.section__qanda .wrapper2 {
+
+}
+
+.section__qanda h2{
+    font-family: 'Syne';
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 64px;
+    color: #000000;
+    margin-bottom: 24px;
+    margin-top: 0px;
+}
+
+.section__qanda h3 {
+    font-family: 'Space Grotesk';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #532C59;
+    margin: 0;
+    
 }
 
 .qa__wrapper {
+    display: flex;
+    flex-flow: column;
     padding: 24px;
     border: 2px solid #D6BCFA;
     border-radius: 15px;
     background: #FCFAFF;
     position: relative;
-    min-width: 412px;
+    max-width: 412px;
+    height: fit-content;
+    margin-bottom: 24px;
+    cursor: pointer;
 }
 
 .qa__wrapper p{
     font-family: 'Space Grotesk';
-    font-size: 20px;
     font-weight: 500;
+    font-size: 20px;
     line-height: 26px;
-    opacity: 0.8px;
     color: #000000;
+    opacity: 0.8; 
     margin: 0;
-    padding-bottom: 12px;    
+    padding-bottom: 12px;
 }
 
 .qa__wrapper span {
@@ -361,4 +416,194 @@ header img {
     right: 24px;
     top: 24px;
     cursor: pointer;
+}
+
+/* section__ready */
+
+.section__ready {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1440px;
+    margin-top: 90px;
+    margin-bottom: 160px;
+}
+
+.ready__wrapper {
+    background: #FCFAFF;
+    border: 1px solid #D6BCFA;
+    box-shadow: inset 0px 0px 50px #F8E0FA;
+    border-radius: 60px;
+
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 1300px;
+    height: 446px;
+
+    position: relative;
+    
+}
+
+.ready__wrapper h2 {
+    font-family: 'Syne';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    text-align: center;
+    color: #000000;
+    margin-top: 0px;
+    margin-bottom: 16px;
+}
+
+.ready__wrapper h3 {
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #532C59;
+    margin-top: 0px;
+    margin-bottom: 32px;
+}
+
+.ready__wrapper button {
+    font-family: 'Syne';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+    background: #532C59;
+    border-radius: 15px;
+    outline: none;
+    padding: 16px 20px;
+}
+
+.ready__wrapper img {
+    position: absolute;
+}
+
+.ready__wrapper img:first-child {
+    left: 0
+}
+
+.ready__wrapper img:nth-child(2) {
+    right: 0;
+}
+
+
+/* footer */
+
+footer {
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+footer .top {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 41px;
+    border-bottom: 1px solid #CCD5DF;
+}
+
+footer .top a {
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+    opacity: 0.5;
+    text-decoration: none;
+    margin-right: 24px;
+}
+
+footer .top .a__wrapper a:last-child {
+    margin-right: 0px;
+}
+
+footer .bottom {
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #000000;
+    opacity: 0.5;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+@media (max-width: 1170px) {
+    .sellNFt__img3 {
+        top: 360px;
+    }
+    
+}
+
+@media (max-width: 1000px) {
+    header .wrapper a{
+        display: none;
+    }
+
+    .sellNFt__img2 {
+        top: -5px;
+        right: 40px;
+    }
+
+}
+
+@media (max-width: 720px) {
+    .section__sellNFt h1 {
+        font-size: 36px;
+        line-height: 56px;
+    }
+
+    .section__sellNFt p {
+        padding-top: 16px;
+        margin-bottom: 24px;
+    }
+
+    .section__sellNFt p br {
+        display: none;
+    }
+
+    .section__sellNFt {
+        padding: 0px 50px;
+    }
+
+    .sellNFt__img1 {
+        top: 148px;
+        left: -110px;
+    }
+
+    .sellNFt__img2 {
+        right: 2px;
+        top: -5px
+    }
+
+    .sellNFt__img4 {
+        width: 105px;
+        height: auto;
+        right: -50px;
+        top: 363px;
+    }
+
+    .sellNFt__img3 {
+        width: 122px;
+        height: auto;
+        left: -44px;
+        top: 398px;
+    }
+    
 }
